"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = cffi
 url = http://pypi.debian.net/cffi/cffi-1.11.5.tar.gz
 archives = 
-giturl = 
+giturl = https://bitbucket.org/cffi/cffi/
 
 [autospec]
 # build 32 bit libraries
